jhead (1:2.90-3) unstable; urgency=low

  * Fix "Can't run mogrify from graphicsmagick." add a Suggests: imagemagick
    (Closes: #463225)

 -- Ludovic Rousseau <rousseau@debian.org>  Sun, 27 Mar 2011 16:49:03 +0200

jhead (1:2.90-2) unstable; urgency=low

  * debian/patches/24_jhead.1: Fix "confusing manpage" (Closes: #570608)

 -- Ludovic Rousseau <rousseau@debian.org>  Sun, 21 Feb 2010 16:15:40 +0100

jhead (1:2.90-1) unstable; urgency=low

  * New upstream release
  * debian/patches/* removed. They are now included upstream.
  * debian/patches/23_jhead.1: fix manpage-has-errors-from-man
    usr/share/man/man1/jhead.1.gz 54: warning: macro `&'' not defined
  * debian/control: Standards-Version: 3.8.3 -> 3.8.4. no change needed

 -- Ludovic Rousseau <rousseau@debian.org>  Fri, 05 Feb 2010 18:54:04 +0100

jhead (1:2.88-2) unstable; urgency=low

  * debian/control: add Depends: ${misc:Depends}
    W: jhead source: debhelper-but-no-misc-depends jhead
  * debian/patches/21_jhead.c: fix a spelling typo
  * debian/patches/22_jhead.1: fix hyphen-used-as-minus-sign

 -- Ludovic Rousseau <rousseau@debian.org>  Sun, 03 Jan 2010 17:03:59 +0100

jhead (1:2.88-1) unstable; urgency=low

  * New upstream release
    - debian/patches/30_buffer_overflow: patch included upstream
  * debian/control: Standards-Version: 3.8.1 -> 3.8.3. No change needed.
  * Move to "3.0 (quilt)" source format
  * Use an epoch number since 2.88 < 2.875
  * debian/patches/20_jhead.1: use DEP-3 format

 -- Ludovic Rousseau <rousseau@debian.org>  Sun, 29 Nov 2009 18:28:42 +0100

jhead (2.875-2) unstable; urgency=low

  * Fix "segmentation fault on corrupt input file" patch from upstream
    debian/patches/30_buffer_overflow (Closes: #530401)

 -- Ludovic Rousseau <rousseau@debian.org>  Sun, 31 May 2009 17:36:13 +0200

jhead (2.875-1) unstable; urgency=low

  * New upstream release
   - Fix "document Nonfatal Error: Illegal subdirectory link" the error