@@ -2,8 +2,9 @@ jhead (1:2.90-3) unstable; urgency=low
 
   * Fix "Can't run mogrify from graphicsmagick." add a Suggests: imagemagick
     (Closes: #463225)
+  * debian/rules: use a minimal version
 
- -- Ludovic Rousseau <rousseau@debian.org>  Sun, 27 Mar 2011 16:49:03 +0200
+ -- Ludovic Rousseau <rousseau@debian.org>  Sun, 27 Mar 2011 18:20:35 +0000
 
 jhead (1:2.90-2) unstable; urgency=low
 
